css/main.css
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
main {
  flex: 1 0 auto;
  background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
}

.card {
  margin: 4rem 0 4rem 0;
}

.input-field label {
  color: #000;
}

.tabs-fixed-width {
  overflow-x: hidden;
}

.range-field-wrapper .range-field {
  margin-top: 1rem !important;
  padding-top: 0;
}

.modal.bottom-sheet {
  max-height: 70%;
}

.field-title {
  font-size: 0.8rem;
}

#medication .col .card {
  margin-top: 0;
}

.radio-inline {
  display: inline;
  margin-right: 2rem;
}

.card-panel {
  padding: 8px 12px 12px 12px;
}

